Bug 122915 - FILESAVE XLSX Single Data Label formatting disappears after exported
Summary: FILESAVE XLSX Single Data Label formatting disappears after exported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.0.0.5 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks: Chart-Labels
  Show dependency treegraph
 
Reported: 2019-01-24 07:45 UTC by NISZ LibreOffice Team
Modified: 2019-02-04 12:41 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the original and exported document side by side in Calc. (176.95 KB, image/png)
2019-01-24 07:48 UTC, NISZ LibreOffice Team
Details
Example ODS file from Calc. (15.66 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-01-24 07:50 UTC, NISZ LibreOffice Team
Details
The original file saved as XLSX. (17.33 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-01-24 07:51 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-01-24 07:45:13 UTC
Description:
Single Data Label formatting disappears when the document is saved in XLSX format.

Steps to Reproduce:
    1. Create a new spreadsheet in LibreOffice Calc.
    2. Insert a chart.
    3. Choose Insert -> Data Labels (Charts).
    4. Select Show value as number.
    5. Press OK button.
    6. Click the one data label and then click it again, so that it's the only data label selected.
    7. Right-click and select Format Single Data Label..
    8. On the Font tab, change Font, Style or Size.
    9. On the Font Effects tab, change Font color.
    10. Press OK button.
    11. Save the file as XLSX.
    12. Reload the file.


Actual Results:
Single Data Label formatting disappears.

Expected Results:
Single Data Label formatting should appear.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 NISZ LibreOffice Team 2019-01-24 07:48:39 UTC
Created attachment 148578 [details]
Screenshot of the original and exported document side by side in Calc.
Comment 2 NISZ LibreOffice Team 2019-01-24 07:50:19 UTC
Created attachment 148579 [details]
Example ODS file from Calc.
Comment 3 NISZ LibreOffice Team 2019-01-24 07:51:11 UTC
Created attachment 148580 [details]
The original file saved as XLSX.
Comment 4 Balázs Varga 2019-01-24 08:07:23 UTC
Confirmed in:

Version: 6.3.0.0.alpha0+
Build ID: 8f7c35072a6bbb33f6582c8c9a37a275c8d3cb14
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 5 Commit Notification 2019-01-30 08:11:22 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/2eac095e2a672db180dc816350c1585a65245c7c%5E%21

tdf#122915 Chart OOXML: Export individual data label prop

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.