tdf#122915 Chart OOXML: Export individual data label prop

Export the xLabelPropSet instead of the xPropset and the
individual data label formatting will not be disappeared.

Change-Id: Ic8c64543ad1e8b40d6d6a5cb7a9a244923e028f1
Reviewed-on: https://gerrit.libreoffice.org/66995
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>